--- a/BlogEngine/BlogEngine.NET/BlogEngine.NET.csproj
+++ b/BlogEngine/BlogEngine.NET/BlogEngine.NET.csproj
@@ -1604,6 +1604,7 @@
     <Content Include="setup\Web.config" />
     <Content Include="Scripts\version.json" />
     <Content Include="setup\MySQL\MySQLWeb.Config" />
+    <Content Include="setup\SQLServer\Web.Config" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
