--- a/BlogEngine/BlogEngine.NET/BlogEngine.NET.csproj
+++ b/BlogEngine/BlogEngine.NET/BlogEngine.NET.csproj
@@ -550,6 +550,54 @@
     <Content Include="Custom\Controls\Defaults\CommentView.ascx" />
     <Content Include="Custom\Controls\Defaults\PostView.ascx" />
     <Content Include="Custom\Media\sample.flv" />
+    <Content Include="Custom\Themes\Boldy\CommentForm.ascx" />
+    <Content Include="Custom\Themes\Boldy\CommentView.ascx" />
+    <Content Include="Custom\Themes\Boldy\newsletter.html" />
+    <Content Include="Custom\Themes\Boldy\PostNavigation.ascx" />
+    <Content Include="Custom\Themes\Boldy\PostView.ascx" />
+    <Content Include="Custom\Themes\Boldy\RelatedPosts.ascx" />
+    <Content Include="Custom\Themes\Boldy\src\css\ddsmoothmenu.css" />
+    <Content Include="Custom\Themes\Boldy\src\css\rtl.css" />
+    <Content Include="Custom\Themes\Boldy\src\css\styles.css" />
+    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.svg" />
+    <Content Include="Custom\Themes\Boldy\src\images\bg_1.jpg" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_body.jpg" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_mainmenu.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_main_wrapper.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_submenu.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_topsocial.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_topsocial_hover.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\bk_top_search.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\but_form.jpg" />
+    <Content Include="Custom\Themes\Boldy\src\images\but_search.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\carrow.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\ico_facebook.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\ico_linkedin.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\ico_rss.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\ico_twitter.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\sarrow.png" />
+    <Content Include="Custom\Themes\Boldy\src\images\site5.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\bg_1.jpg" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_body.jpg" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_mainmenu.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_main_wrapper.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_submenu.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_topsocial.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_topsocial_hover.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\bk_top_search.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\but_form.jpg" />
+    <Content Include="Custom\Themes\Boldy\src\img\but_search.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\carrow.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\ico_facebook.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\ico_linkedin.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\ico_rss.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\ico_twitter.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\sarrow.png" />
+    <Content Include="Custom\Themes\Boldy\src\img\site5.png" />
+    <Content Include="Custom\Themes\Boldy\src\js\ddsmoothmenu.js" />
+    <Content Include="Custom\Themes\Boldy\theme.png" />
+    <Content Include="Custom\Themes\Boldy\theme.xml" />
+    <Content Include="Custom\Themes\Boldy\WidgetContainer.ascx" />
     <Content Include="Custom\Themes\Standard-2017\CommentForm.ascx" />
     <Content Include="Custom\Themes\Standard-2017\CommentView.ascx" />
     <Content Include="Custom\Themes\Standard-2017\newsletter.html" />
@@ -767,6 +815,11 @@
     <Content Include="Custom\Themes\Standard-2017\src\fonts\fontawesome-webfont.woff2" />
     <Content Include="Custom\Themes\Standard-2017\src\fonts\FontAwesome.otf" />
     <Content Include="Custom\Themes\Standard\page.master" />
+    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.eot" />
+    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.ttf" />
+    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.woff" />
+    <Content Include="Custom\Themes\Boldy\src\fonts\Yekan.woff" />
+    <Content Include="Custom\Themes\Boldy\site.master" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\i18n\angular-locale_aa-dj.js" />
