--- a/BlogEngine/BlogEngine.NET/BlogEngine.NET.csproj
+++ b/BlogEngine/BlogEngine.NET/BlogEngine.NET.csproj
@@ -556,45 +556,45 @@
     <Content Include="Custom\Themes\Boldy\PostNavigation.ascx" />
     <Content Include="Custom\Themes\Boldy\PostView.ascx" />
     <Content Include="Custom\Themes\Boldy\RelatedPosts.ascx" />
-    <Content Include="Custom\Themes\Boldy\src\css\ddsmoothmenu.css" />
-    <Content Include="Custom\Themes\Boldy\src\css\rtl.css" />
-    <Content Include="Custom\Themes\Boldy\src\css\styles.css" />
-    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.svg" />
-    <Content Include="Custom\Themes\Boldy\src\images\bg_1.jpg" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_body.jpg" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_mainmenu.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_main_wrapper.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_submenu.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_topsocial.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_topsocial_hover.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\bk_top_search.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\but_form.jpg" />
-    <Content Include="Custom\Themes\Boldy\src\images\but_search.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\carrow.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\ico_facebook.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\ico_linkedin.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\ico_rss.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\ico_twitter.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\sarrow.png" />
-    <Content Include="Custom\Themes\Boldy\src\images\site5.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\bg_1.jpg" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_body.jpg" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_mainmenu.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_main_wrapper.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_submenu.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_topsocial.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_topsocial_hover.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\bk_top_search.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\but_form.jpg" />
-    <Content Include="Custom\Themes\Boldy\src\img\but_search.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\carrow.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\ico_facebook.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\ico_linkedin.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\ico_rss.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\ico_twitter.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\sarrow.png" />
-    <Content Include="Custom\Themes\Boldy\src\img\site5.png" />
-    <Content Include="Custom\Themes\Boldy\src\js\ddsmoothmenu.js" />
+    <Content Include="Custom\Themes\Boldy\css\ddsmoothmenu.css" />
+    <Content Include="Custom\Themes\Boldy\css\rtl.css" />
+    <Content Include="Custom\Themes\Boldy\css\styles.css" />
+    <Content Include="Custom\Themes\Boldy\fonts\fontello.svg" />
+    <Content Include="Custom\Themes\Boldy\images\bg_1.jpg" />
+    <Content Include="Custom\Themes\Boldy\images\bk_body.jpg" />
+    <Content Include="Custom\Themes\Boldy\images\bk_mainmenu.png" />
+    <Content Include="Custom\Themes\Boldy\images\bk_main_wrapper.png" />
+    <Content Include="Custom\Themes\Boldy\images\bk_submenu.png" />
+    <Content Include="Custom\Themes\Boldy\images\bk_topsocial.png" />
+    <Content Include="Custom\Themes\Boldy\images\bk_topsocial_hover.png" />
+    <Content Include="Custom\Themes\Boldy\images\bk_top_search.png" />
+    <Content Include="Custom\Themes\Boldy\images\but_form.jpg" />
+    <Content Include="Custom\Themes\Boldy\images\but_search.png" />
+    <Content Include="Custom\Themes\Boldy\images\carrow.png" />
+    <Content Include="Custom\Themes\Boldy\images\ico_facebook.png" />
+    <Content Include="Custom\Themes\Boldy\images\ico_linkedin.png" />
+    <Content Include="Custom\Themes\Boldy\images\ico_rss.png" />
+    <Content Include="Custom\Themes\Boldy\images\ico_twitter.png" />
+    <Content Include="Custom\Themes\Boldy\images\sarrow.png" />
+    <Content Include="Custom\Themes\Boldy\images\site5.png" />
+    <Content Include="Custom\Themes\Boldy\img\bg_1.jpg" />
+    <Content Include="Custom\Themes\Boldy\img\bk_body.jpg" />
+    <Content Include="Custom\Themes\Boldy\img\bk_mainmenu.png" />
+    <Content Include="Custom\Themes\Boldy\img\bk_main_wrapper.png" />
+    <Content Include="Custom\Themes\Boldy\img\bk_submenu.png" />
+    <Content Include="Custom\Themes\Boldy\img\bk_topsocial.png" />
+    <Content Include="Custom\Themes\Boldy\img\bk_topsocial_hover.png" />
+    <Content Include="Custom\Themes\Boldy\img\bk_top_search.png" />
+    <Content Include="Custom\Themes\Boldy\img\but_form.jpg" />
+    <Content Include="Custom\Themes\Boldy\img\but_search.png" />
+    <Content Include="Custom\Themes\Boldy\img\carrow.png" />
+    <Content Include="Custom\Themes\Boldy\img\ico_facebook.png" />
+    <Content Include="Custom\Themes\Boldy\img\ico_linkedin.png" />
+    <Content Include="Custom\Themes\Boldy\img\ico_rss.png" />
+    <Content Include="Custom\Themes\Boldy\img\ico_twitter.png" />
+    <Content Include="Custom\Themes\Boldy\img\sarrow.png" />
+    <Content Include="Custom\Themes\Boldy\img\site5.png" />
+    <Content Include="Custom\Themes\Boldy\js\ddsmoothmenu.js" />
     <Content Include="Custom\Themes\Boldy\theme.png" />
     <Content Include="Custom\Themes\Boldy\theme.xml" />
     <Content Include="Custom\Themes\Boldy\WidgetContainer.ascx" />
@@ -815,10 +815,10 @@
     <Content Include="Custom\Themes\Standard-2017\src\fonts\fontawesome-webfont.woff2" />
     <Content Include="Custom\Themes\Standard-2017\src\fonts\FontAwesome.otf" />
     <Content Include="Custom\Themes\Standard\page.master" />
-    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.eot" />
-    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.ttf" />
-    <Content Include="Custom\Themes\Boldy\src\fonts\fontello.woff" />
-    <Content Include="Custom\Themes\Boldy\src\fonts\Yekan.woff" />
+    <Content Include="Custom\Themes\Boldy\fonts\fontello.eot" />
+    <Content Include="Custom\Themes\Boldy\fonts\fontello.ttf" />
+    <Content Include="Custom\Themes\Boldy\fonts\fontello.woff" />
+    <Content Include="Custom\Themes\Boldy\fonts\Yekan.woff" />
     <Content Include="Custom\Themes\Boldy\site.master" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
